sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:9: error: not found: value afterBlue
      if (i < afterBlue && getColor(i) != Color.BLUE){
              ^DutchFlagAlgo:11: error: not found: value afterBlue
        afterBlue += 1
        ^